@@ -3365,7 +3365,9 @@ class LMS {
 
 	function GetQueueList($stats = true) {
 		if ($result = $this->DB->GetAll('SELECT id, name, email, description 
-				FROM rtqueues ORDER BY name')) {
+				FROM rtqueues q ORDER BY name'
+				. (!check_conf('privileges.superuser') ? ' JOIN rtrights r ON r.queueid = q.id
+					WHERE r.rights <> 0 AND r.userid = ?' : ''), array($this->AUTH->id))) {
 			if ($stats)
 				foreach ($result as $idx => $row)
 					foreach ($this->GetQueueStats($row['id']) as $sidx => $row)
@@ -3375,7 +3377,9 @@ class LMS {
 	}
 
 	function GetQueueNames() {
-		return $this->DB->GetAll('SELECT id, name FROM rtqueues ORDER BY name');
+		return $this->DB->GetAll('SELECT id, name FROM rtqueues q ORDER BY name'
+			. (!check_conf('privileges.superuser') ? ' JOIN rtrights r ON r.queueid = q.id 
+				WHERE r.rights <> 0 AND r.userid = ?' : ''), array($this->AUTH->id));
 	}
 
 	function QueueExists($id) {
