@@ -130,6 +130,7 @@ version ? (????-??-??):
     access table [chilan]
   - new simple plugin which allows to use one-time sms passwords [chilan]
   - payments: support %type placeholder which gets its value from tarifftypes config section [chilan]
+  - queues to whom we don't have access privileges, are not shown at all [chilan]
 
 version 1.11.13 Dira (2011-04-07)
 
